Updates from Overleaf

--- a/FJH23.bib
+++ b/FJH23.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Fred J Hickernell at 2021-11-16 12:34:50 -0600 
+%% Created for Fred J Hickernell at 2022-03-15 08:56:08 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -75,11 +75,28 @@
 @string{sub = {\Ignore{u}Manuscripts Under Review}}
 
 
+@book{Ber09a,
+	address = {Princeton and Oxford},
+	author = {D. S. Bernstein},
+	date-added = {2022-03-15 08:54:23 -0500},
+	date-modified = {2022-03-15 08:56:08 -0500},
+	publisher = {Princeton University Press},
+	title = {Matrix Mathematics: {T}heory, Facts, and Formulas},
+	year = {2009}}
+
+@book{Coh03a,
+	author = {J. Cohen},
+	date-added = {2022-03-07 12:28:35 -0600},
+	date-modified = {2022-03-07 12:29:57 -0600},
+	publisher = {CRC Press},
+	title = {Computer Algebra and Symbolic Computation: Mathematical Methods},
+	year = {2003}}
+
 @misc{Ips21a,
 	author = {I. Ipsen},
 	date-added = {2021-11-16 11:02:15 -0600},
-	date-modified = {2021-11-16 11:02:15 -0600},
-	howpublished = {Presentation at Dagstuhl Seminar on Proabilistic Numerical Methods -- From Theory to Implmentation},
+	date-modified = {2021-11-18 17:02:27 -0600},
+	howpublished = {Presentation at Dagstuhl Seminar on Proabilistic Numerical Methods -- From Theory to Implementation},
 	title = {{BayesCG}: A Probabilistic Numeric Linear Solver},
 	year = {2021}}
 
@@ -94,8 +111,8 @@
 
 @webpage{IDEASWatershedPict,
 	date-added = {2021-11-11 12:27:43 -0600},
-	date-modified = {2021-11-11 12:30:00 -0600},
-	title = {IDEAS Watersheds Code Diagam},
+	date-modified = {2021-11-18 17:01:31 -0600},
+	title = {IDEAS Watersheds Code Diagram},
 	url = {https://ess.science.energy.gov/wp-content/uploads/2021/01/IDEAS-Watersheds-software-ecosystem-road.jpg},
 	year = {2021},
 	bdsk-url-1 = {https://ess.science.energy.gov/wp-content/uploads/2021/01/IDEAS-Watersheds-software-ecosystem-road.jpg}}
@@ -112,8 +129,8 @@
 @webpage{probnum,
 	author = {J. Wenger and N. Kr\"amer and N. Bosch},
 	date-added = {2021-11-10 16:50:49 -0600},
-	date-modified = {2021-11-10 16:52:30 -0600},
-	title = {probnum},
+	date-modified = {2021-11-18 17:13:05 -0600},
+	title = {Prob{N}um},
 	url = {https://github.com/probabilistic-numerics/probnum},
 	year = {2021},
 	bdsk-url-1 = {https://github.com/probabilistic-numerics/probnum}}
