Updates from Overleaf

--- a/SobolBayesCub-ver-c.tex
+++ b/SobolBayesCub-ver-c.tex
@@ -386,7 +386,7 @@ K_{\bstheta} (\bsx) & =
 \prod_{\ell=1}^d  [1 + \eta_\ell \omega_{r} (x_\ell)], \quad \bseta = (\eta_1, \cdots, \eta_d), \quad \bstheta = (r, \bseta).
 \end{align}
 For mutidimensional kernels, smaller $\eta_\ell$ for $\ell \in (1, \dots d)$ implies less variation in the amplitude of the kernel in dimension $\ell$.  
-The parameter vector $\bstheta$ now is of dimension $d+1$.
+The parameter vector $\bstheta$ now is of dimension $d+1$.  One might also choose $\eta_1 = \cdots = \eta_d = \eta$, in which case the parameter vector $\bstheta = (r,\eta)$ has dimension two.
 
 \subsection{Eigenvector-Eigenvalue Decomposition of the Gram Matrix}
 
